--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeevan Chetna Foundation | Empowering Communities</title>
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="/jeevanchetna-logo.png">
     <link rel="manifest" href="/manifest.json">
   </head>
 
